scrollbar style, z fix, items sort

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,2 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+html {
+  overflow-y: overlay;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0,0,0,.2);
+  box-shadow: inset 0 0 2px rgba(0,0,0,.2);
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: 0 0 2px rgba(0,0,0,.2);
+  background: rgba(0,0,0,.4);
+  border-radius: 2.5rem;
+  padding: 1rem 0;
+}
